# bigmama

./: .gitignore  CMakeLists.txt
assets/: CMakeLists.txt  LICENSE  bin2c.cpp  level1.json  template.json
assets/resources/: basic_border.xcf  level_edit_frame.xcf  stone_grey.xcf  stone_red.xcf  test_libyrinth.xcf
cmake/: FindSevenZip.cmake
include/: abstract_game.h  asset_chooser_pane.h  assets.h  element.h  exceptions.h  file_system.h  game.h  game_board.h  game_board_edit.h  level.h  level_editor.h  resources.h  screen.h  sfml_canvas.h  state.h  texture.h  translation_scope.h  types.h
scripts/: update-translations.sh
src/: CMakeLists.txt  abstract_game.cpp  asset_chooser_pane.cpp  assets.cpp  bigmama.cpp  bigmamalevel.cpp  element.cpp  file_system.cpp  game.cpp  game_board.cpp  game_board_edit.cpp  level.cpp  level_editor.cpp  resources.cpp  sfml_canvas.cpp  state.cpp  texture.cpp  translation_scope.cpp
tools/: CMakeLists.txt  png2json.cpp
translations/: CMakeLists.txt  bigmama_de.ts  bigmama_en.ts
